--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,16 @@
 version: '3'
 services:
   manager:
-    env_file:
-      - .env
     container_name: manager
     build: ./client-manager
     ports:
       - "8080:8080"
     depends_on:
-      - db
+      - "db"
   db:
-    env_file:
-      - .env
     container_name: db
-    build: ./client-manager/db
+    image: postgres
     ports:
       - "5432:5432"
-    volumes:
-      - ./client-manager/data/db:/var/lib/postgresql/data
+    environment:
+      POSTGRES_PASSWORD: postgres
