--- a/client-manager/build.gradle
+++ b/client-manager/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web:2.7.4'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.4'
 	implementation 'org.modelmapper:modelmapper:3.1.0'
+	implementation 'javax.validation:validation-api:2.0.1.Final'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	runtimeOnly 'org.postgresql:postgresql:42.5.0'
