--- a/client-manager/build.gradle
+++ b/client-manager/build.gradle
@@ -21,6 +21,7 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	runtimeOnly 'org.postgresql:postgresql:42.5.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.4'
+	testImplementation 'org.assertj:assertj-core:3.23.1'
 }
 
 tasks.named('test') {
