--- a/client-manager/build.gradle
+++ b/client-manager/build.gradle
@@ -17,6 +17,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.7.4'
 	implementation 'org.modelmapper:modelmapper:3.1.0'
 	implementation 'javax.validation:validation-api:2.0.1.Final'
+	implementation 'org.hibernate.validator:hibernate-validator:6.2.5.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.hibernate:hibernate-ehcache:5.6.12.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.6.13'
 	compileOnly 'org.projectlombok:lombok:1.18.24'
 	annotationProcessor 'org.projectlombok:lombok:1.18.24'
 	runtimeOnly 'org.postgresql:postgresql:42.5.0'
