--- a/client-manager/db/Dockerfile
+++ b/client-manager/db/Dockerfile
@@ -1,5 +1,5 @@
 FROM postgres:15
 
-COPY init.sql /docker-entrypoint-initdb.d/
+COPY schema.sql /docker-entrypoint-initdb.d/
 
-RUN chmod 0755 /docker-entrypoint-initdb.d/init.sql
+RUN chmod 0755 /docker-entrypoint-initdb.d/schema.sql
